# agent0

./: .coveragerc  .env.sample  .gitignore  .isort.cfg  .pylintdocstring  .pylintrc  .readthedocs.yaml  BUILD.md  CONTRIBUTING.md  Dockerfile  Dockerfile-elf-sims  Dockerfile-python-base  Dockerfile_python_base  INSTALL.md  README.md  STYLEGUIDE.md  Slippage & Fees Vs Liquidity.ipynb  accounts.default.env  anvil_crash.sh  anvil_crash2.sh  anvil_regular.sh  ape-config.yaml  ape-config.yaml.example  apy_slippage.ipynb  auto_sweep.ipynb  bots_default_config.py  calc_liquidity_math.py  check_ezeth.py  codecov.yml  compare_files.ipynb  config_to_json.py  conftest.py  coupon-harvesting.ipynb  deadzone.py  demo.py  dp_test.py  env.sample  eth.default.env  eth.env.sample  fail_calc_targeted_long.py  (+49 more)
lib/agent0/: README.md  pyproject.toml  tutorial.ipynb
lib/agent0/accounts/: __init__.py  eth_account.py
lib/agent0/agent0/: __init__.py  accounts_config.py
lib/agent0/agent0/base/: __init__.py  create_and_fund_accounts.py  execute_agent_trades.py  generate_env.py  get_agent_accounts.py  make_key.py  setup_experiment.py  trade_loop.py  types.py  types_test.py
lib/agent0/agent0/config/: __init__.py  agent_config.py
lib/agent0/agent0/core/: crash_report.py  execute_agent_trades.py  get_agent_accounts.py  setup_experiment.py
lib/agent0/agent0/hyperdrive/: __init__.py  checkpoint_bot.py  crash_report.py  crash_report.test.py  create_and_fund_accounts.py  fund_bots.py  generate_env.py
lib/agent0/agent0/interactive_fuzz/: __init__.py  fuzz_hyperdrive_balance.py  fuzz_long_short_maturity_values.py  fuzz_path_independence.py  fuzz_present_value.py  fuzz_profit_check.py  generate_trade_list.py  open_random_trades.py  run_all_fuzz_tests.py  setup_fuzz.py
lib/agent0/agent0/logging/: rollbar_utilities.py
lib/agent0/agent0/test_fixtures/: __init__.py  chain.py  cycle_trade_policy.py  interface.py
lib/agent0/agent0/test_utils/: __init__.py  assert_never.py  cycle_trade_policy.py
lib/agent0/agent0/utilities/: __init__.py  docker.py  predict.py
lib/agent0/examples/: custom_agent.py  example_agent.py  example_bot.py  hyperdrive_agents.py  hyperdrive_bots.py  interactive_econ.py  interactive_hyperdrive.py  interactive_hyperdrive_advanced_example.py  interactive_hyperdrive_example.py  interactive_hyperdrive_optional_policy_example.py  interactive_hyperdrive_remote.py  interactive_local_hyperdrive_advanced_example.py  interactive_local_hyperdrive_example.py  interactive_remote_hyperdrive_example.py  lp_agents.py
lib/agent0/interactive_fuzz/: close_random_trades.py  fuzz_hyperdrive_balance.py  fuzz_long_short_maturity_values.py  fuzz_path_independence.py  fuzz_profit_check.py  run_interactive_fuzz.sh
lib/agent0/tests/: econ_tests.py  interactive_hyperdrive_test.py  model_zoo_test.py  predict_trade_test.py  target_rate_test.py  test_multi_trade_per_block.py
lib/chainsync/: pyproject.toml
lib/chainsync/chainsync/: __init__.py  postgres_config.py
lib/chainsync/chainsync/analysis/: __init__.py  calc_base_buffer.py  calc_fixed_rate.py  calc_ohlcv.py  calc_pnl.py  calc_spot_price.py  calc_ticker.py  data_to_analysis.py
lib/chainsync/chainsync/base/: __init__.py  conversions.py  db_interface.py  db_schema.py  postgres.py  test_db_utils.py  test_transaction.py  test_user_map.py
lib/chainsync/chainsync/dashboard/: __init__.py  build_fixed_rate.py  build_leaderboard.py  build_ohlcv.py  build_outstanding_positions.py  build_ticker.py  build_variable_rate.py  extract_data_logs.py  plot_fixed_rate.py  plot_ohlcv.py  plot_outstanding_positions.py  plot_utils.py  run_demo.py  usernames.py
lib/chainsync/chainsync/db/: __init__.py
lib/chainsync/chainsync/exec/: __init__.py  acquire_data.py  data_analysis.py
lib/chainsync/chainsync/hyperdrive/: __init__.py  convert_data.py  crash_report.py  db_interface.py  db_schema.py  get_hyperdrive_contract.py  postgres.py  test_checkpoint.py  test_crash_report.py  test_pool_info.py  test_wallet_deltas.py  test_wallet_info.py
lib/chainsync/chainsync/test_fixtures/: __init__.py  db_session.py  dummy_session.py
lib/chainsync/scripts/: calc_prev_leaderboard.py  prev_leaderboard_final_tally.py
lib/chainsync/tests/base/: test_db_utils.py  test_transaction.py  test_user_map.py
lib/chainsync/tests/hyperdrive/: test_checkpoint.py  test_crash_report.py  test_pool_config.py  test_pool_info.py  test_wallet_deltas.py  (+1 more)
lib/elfpy/: README.md  pyproject.toml
lib/elfpy/elfpy/: types.py
lib/elfpy/tests/: test_agents.py  test_time.py
lib/ethpy/: pyproject.toml  web3_setup.py
lib/ethpy/ethpy/: __init__.py  eth_config.py
lib/ethpy/tests/: test_interface.py
lib/hyperlogs/: pyproject.toml
lib/hyperlogs/hyperlogs/: __init__.py  json_encoder.py  logs.py  logs_test.py  rollbar_utilities.py
lib/pypechain/: README.md  pyproject.toml
lib/pypechain/abis/: ERC20.json  IHyperdrive.json
lib/pypechain/pypechain/: ERC20.py  __init__.py  abi.py  pypechain.py  run_pypechain.py
lib/traiderdaive/: README.md  pyproject.toml
lib/traiderdaive/traiderdaive/: __init__.py
src/elfpy/: __init__.py  agent.py  main.py  markets.py  pricing_models.py  pyproject.toml  simulators.py  token.py  types.py  user.py  wallet.py
src/elfpy/agents/: agent.py  wallet.py
src/elfpy/markets/: borrow.py  hyperdrive.py
src/elfpy/policies/: basic.py  init_lp.py  lp_and_withdraw.py  no_action.py  single_long.py  single_lp.py  single_short.py
src/elfpy/pricing_models/: __init__.py  base.py  element.py  hyperdrive.py  yieldspace.py
src/elfpy/simulators/: __init__.py  simulators.py  trades.py
src/elfpy/strategies/: LP_and_withdraw.py  basic.py  dynamic_long.py  dynamic_short.py  init_LP.py  init_lp.py  lp_and_withdraw.py  multi_short.py  simple_LP.py  simple_short.py  single_LP.py  single_long.py  single_lp.py  single_short.py
src/elfpy/utils/: basic_dataclass.py  bcolors.py  config.py  data.py  default_config.pkl  float_to_string.py  fmt.py  get_max_short.py  outputs.py  parse_config.py  parse_json.py  plot.py  post_processing.py  price.py  sim_utils.py  testing.py  time.py
(+1748 files in other folders)
