[project]
name = "agent0"
version = "0.10.0"
# Authors are the current, primary stuards of the repo
# contributors can be found on github
authors = [
    { name = "Dylan Paiton", email = "dylan@delv.tech" },
    { name = "Mihai Cosma", email = "mihai@delv.tech" },
    { name = "Matthew Brown", email = "matt@delv.tech" },
    { name = "Sheng Lundquist", email = "sheng@delv.tech" },
    { name = "Jonny Rhea", email = "jonny@delv.tech" },
    { name = "Alex Towle", email = "alex@delv.tech" },
    { name = "Giovanni Effio", email = "mazygio@delv.tech" },
    { name = "Ryan Goree", email = "ryan@delv.tech" },
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--tb=short"]
norecursedirs = ".git examples hyperdrive_solidity"
python_files = "*_test.py test_*.py"
markers = [
    "anvil: tests using anvil (deselect with '-m \"not anvil\"')",
    "docker: tests using docker (deselect with '-m \"not docker\"')",
]

[tool.pylint.format]
max-line-length = "120"

[tool.black]
line-length = "120"
extend-exclude = "\\.ipynb"

[tool.pylint]
exclude = [".venv", ".vscode", "docs"]

[tool.pylance]
exclude = [".venv", ".vscode", "docs"]

[tool.pyright]
exclude = [".venv", ".vscode", "docs"]

[tool.ruff]
# Default is: pycodestyle (E) and Pyflakes (F)
# We add flake8-builtins (A), pydocstyle (D), isort (I), pep8-naming (N), and pylint (PL).
# We remove pycodestyle (E) since it throws erroneous line too long errors.
# We remove Pyflakes (F) since it complains about `import *` which we need.
select = ["A", "D", "I", "N", "PL"]

# We ignore the following rules:
# D203 : 1 blank line required before class docstring (incompatible with D211: no blank lines before class docstring)
# D213 : multi-line-summary-second-line (incompatible with D212: multi-line summary should start at the first line)
# D416 : section-name-ends-in-colon (numpy style guide doesn't use colons after sections, i.e. Parameters)
# PLR0913 : Too many arguments to function call (X > 5)
# PLR0915 : Too many statements (X > 50)
# PLR0912 : Too many branches (X > 12)
ignore = ["D203", "D213", "D416", "PLR0913", "PLR0915", "PLR0912"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "D", "I", "N", "PL"]
unfixable = []

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

exclude = [
    ".venv",
    ".vscode",
    "docs",
]
