[project]
name = "agent0"
version = "0.21.7"
# Authors are the current, primary stewards of the repo
# contributors can be found on github
authors = [
    { name = "Dylan Paiton", email = "dylan@delv.tech" },
    { name = "Mihai Cosma", email = "mihai@delv.tech" },
    { name = "Matthew Brown", email = "matt@delv.tech" },
    { name = "Sheng Lundquist", email = "sheng@delv.tech" },
    { name = "Jonny Rhea", email = "jonny@delv.tech" },
    { name = "Alex Towle", email = "alex@delv.tech" },
    { name = "Giovanni Effio", email = "mazygio@delv.tech" },
    { name = "Ryan Goree", email = "ryan@delv.tech" },
]
description = "Agent interface for on-chain protocols."
readme = "README.md"
requires-python = ">=3.10, <=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
]

dependencies = [
    "dill",
    "docker",
    "eth-typing",
    "eth-account",
    "fixedpointmath",
    "flask",
    "flask-expects-json",
    "hexbytes",
    "hyperdrivepy==0.16.0",
    "ipython",
    "matplotlib",
    "mplfinance",
    "nest_asyncio",
    "numpy",
    "pandas",
    "pandas-stubs",
    "psycopg[binary]",
    "pytest",
    "python-dotenv",
    # "requests",
    # Docker-py breaks with latest requests:
    # https://github.com/docker/docker-py/issues/3256
    "requests==2.31.0",
    "rollbar",
    "setuptools",
    "sqlalchemy",
    "sqlalchemy-utils",
    "streamlit",
    "web3",
]


[project.optional-dependencies]
dev = [
    "autodocsumm>=0.2.11",
    "black==24.*",
    "coverage",
    "ipykernel",
    "jupytext",
    "myst-parser>=2.0.0",
    "nbconvert",
    "nbsphinx>=0.8.12",
    "numpydoc>=1.5.0",
    "pylint",
    "pypechain",
    "pytest-postgresql",
    "pyright",
    "sphinx>=6",
    "sphinx-autoapi>=2.0.1",
    "sphinx_autodoc_typehints>=1.21.8",
    "sphinx-rtd-theme>=1.2.2",
    "sphinxcontrib-napoleon>=0.7",
    "tomli>=2.0.1",
    "urllib3",
]

ai = [
    "gymnasium",
    "scipy",
]

rollbar = [
    "rollbar",
]

all = [
    "agent0[dev,ai,rollbar]",
]

[project.urls]
"Homepage" = "https://agent0.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/delvtech/agent0/issues"

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--tb=short"]
norecursedirs = ".git examples hyperdrive_solidity"
python_files = "*_test.py test_*.py"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "\n%(asctime)s: %(levelname)s: %(filename)s:%(lineno)s::%(module)s::%(funcName)s:\n%(message)s"
log_cli_date_format = "%y-%m-%d %H:%M:%S"

[tool.pylint.format]
max-line-length = "120"

[tool.black]
line-length = 120
extend-exclude = "\\.ipynb"

[tool.pylint]
exclude = [".venv", ".vscode", "docs", "src/agent0/hypertypes/types/"]

[tool.pylance]
exclude = [".venv", ".vscode", "docs"]

[tool.pyright]
exclude = [".venv", ".vscode", "docs"]

[tool.isort]
line_length = 120
profile = "black"

[tool.ruff]
line-length = 120

# Assume Python 3.10.
target-version = "py310"

exclude = [
    ".venv",
    ".vscode",
    "docs",
    "lib"
]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "D", "I", "N", "PL"]
unfixable = []

# We ignore the following rules:
# D203: 1 blank line required before class docstring (incompatible with D211: no blank lines before class docstring)
# D213: multi-line-summary-second-line (incompatible with D212: multi-line summary should start at the first line)
# D413: blank-line-after-last-section (not part of Numpy style guide)
# D415: First line should end with a period, question mark, or exclamation point (in period-only D400)
# D416: section-name-ends-in-colon (numpy style guide doesn't use colons after sections, i.e. Parameters)
ignore = ["D203", "D213", "D413", "D415", "D416"]

# Default is: pycodestyle (E) and Pyflakes (F)
# We add flake8-builtins (A), pydocstyle (D), isort (I), pep8-naming (N), and pylint (PL).
# We remove pycodestyle (E) since it throws erroneous line too long errors.
# We remove Pyflakes (F) since it complains about `import *` which we need.
select = ["A", "D", "I", "N", "PL"]
