[project]
name = "agent0"
version = "0.0.0"
authors = [
    { name = "Dylan Paiton", email = "dylan@delv.tech" },
    { name = "Mihai Cosma", email = "mihai@delv.tech" },
    { name = "Matthew Brown", email = "matt@delv.tech" },
    { name = "Sheng Lundquist", email = "sheng@delv.tech" },
]
description = "Bots interface to the chain"
readme = "README.md"
requires-python = ">=3.10, <=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# This flag installs all dependencies and should be ran when installing this subpackage in isolation
with-dependencies = [
    "agent0[base, lateral]"
]
base = [
    # TODO move fixedpointmath to lateral if this package comes back to this monorepo
    "fixedpointmath @ git+https://github.com/delvtech/agent_0.git/#subdirectory=lib/fixedpointmath",
    "numpy",
    "requests",
    "python-dotenv",
    "web3", # will include eth- packages
    "hexbytes"
]
lateral = [
    # Lateral dependencies across subpackages are pointing to github
    "elfpy @ git+https://github.com/delvtech/elf-simulations.git/#subdirectory=lib/elfpy",
    "ethpy @ git+https://github.com/delvtech/elf-simulations.git/#subdirectory=lib/ethpy",
    "chainsync @ git+https://github.com/delvtech/elf-simulations.git/#subdirectory=lib/chainsync",
]


[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project.urls]
"Homepage" = "https://github.com/delvtech/elf-simulations"
"Bug Tracker" = "https://github.com/delvtech/elf-simulations/issues"
