[project]
name = "agent0"
version = "0.0.0"
authors = [
    { name = "Dylan Paiton", email = "dylan@delv.tech" },
    { name = "Mihai Cosma", email = "mihai@delv.tech" },
    { name = "Matthew Brown", email = "matt@delv.tech" },
    { name = "Sheng Lundquist", email = "sheng@delv.tech" },
]
description = "Agent interface for on-chain protocols."
readme = "README.md"
requires-python = ">=3.10, <=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# This flag installs all dependencies and should be ran when installing this subpackage in isolation
with-dependencies = ["agent0[base, lateral]"]
base = [
    "fixedpointmath==0.1.6",
    "numpy",
    "python-dotenv",
    # will include eth- packages
    "web3",
    "hexbytes",
    "pandas",
    "nest_asyncio",
    "rollbar",
]
lateral = [
    # Lateral dependencies across subpackages are pointing to github
    "hyperlogs[with-dependencies] @ git+https://github.com/delvtech/agent0.git/#subdirectory=lib/hyperlogs",
    "ethpy[with-dependencies] @ git+https://github.com/delvtech/agent0.git/#subdirectory=lib/ethpy",
    "chainsync[with-dependencies] @ git+https://github.com/delvtech/agent0.git/#subdirectory=lib/chainsync",
]


[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project.urls]
"Homepage" = "https://github.com/delvtech/agent0"
"Bug Tracker" = "https://github.com/delvtech/agent0/issues"
