[project]
name = "ethpy"
version = "0.0.0"
authors = [
    { name = "Dylan Paiton", email = "dylan@delv.tech" },
    { name = "Mihai Cosma", email = "mihai@delv.tech" },
    { name = "Matthew Brown", email = "matt@delv.tech" },
    { name = "Sheng Lundquist", email = "sheng@delv.tech" },
]
description = "Python interface for reading/writing from/to the chain"
readme = "README.md"
requires-python = ">=3.10, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# This flag installs all dependencies and should be ran when installing this subpackage in isolation
with-dependencies = [
    "ethpy[base, lateral]"
]
base = [
    # TODO move fixedpointmath to lateral if this package comes back to this monorepo
    "fixedpointmath @ git+https://github.com/delvtech/agent_0.git/#subdirectory=lib/fixedpointmath",
    # TODO figure out the dependencies below
    "matplotlib",
    "numpy",
    "pandas",
    "python-dotenv",
    "web3",
]
lateral = [
    # Lateral dependencies across subpackages are pointing to github
    "elfpy @ git+https://github.com/delvtech/elf-simulations.git/#subdirectory=lib/elfpy",
]

[project.urls]
"Homepage" = "https://github.com/delvtech/elf-simulations"
"Bug Tracker" = "https://github.com/delvtech/elf-simulations/issues"

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"