[project]
name = "ethpy"
version = "0.0.0"
authors = [
    { name = "Dylan Paiton", email = "dylan@delv.tech" },
    { name = "Mihai Cosma", email = "mihai@delv.tech" },
    { name = "Matthew Brown", email = "matt@delv.tech" },
    { name = "Sheng Lundquist", email = "sheng@delv.tech" },
]
description = "Python interface for reading/writing from/to the chain"
readme = "README.md"
requires-python = ">=3.10, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
# This flag installs all dependencies and should be run when installing this subpackage in isolation
with-dependencies = [
    "ethpy[base, lateral]"
]
base = [
    "fixedpointmath @ git+https://github.com/delvtech/agent_0.git/#subdirectory=lib/fixedpointmath",
    # TODO figure out the dependencies below
    "matplotlib",
    "numpy",
    "pandas",
    "python-dotenv",
    "web3",
]
lateral = [
    # Lateral dependencies across subpackages are pointing to github
    "hypertypes[base] @ git+https://github.com/delvtech/agent0.git/#subdirectory=lib/hypertypes",
]

[project.urls]
"Homepage" = "https://github.com/delvtech/agent0"
"Bug Tracker" = "https://github.com/delvtech/agent0/issues"

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"