[project]
name = "ethpy"
version = "0.0.0"
authors = [
    { name = "Dylan Paiton", email = "dylan@delv.tech" },
    { name = "Mihai Cosma", email = "mihai@delv.tech" },
    { name = "Matthew Brown", email = "matt@delv.tech" },
    { name = "Sheng Lundquist", email = "sheng@delv.tech" },
]
description = "Python interface for reading/writing from/to the chain"
readme = "README.md"
requires-python = ">=3.10, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
dependencies = [
    "fixedpointmath",
    "numpy",
    "python-dotenv",
    "web3",
]

[project.urls]
"Homepage" = "https://github.com/delvtech/agent0"
"Bug Tracker" = "https://github.com/delvtech/agent0/issues"

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"